--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <body>
 <h1>Hello world!</h1>
+<div> <img src="image.jpeg" alt="Hello MangGom!"> </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is the first file in my new Git Repo.</p>
 </body>
