updated index.html with em branch

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <div> <img src="image.jpeg" alt="Hello MangGom!"> </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is the first file in my new Git Repo.</p>
+<p>추가하는 연습</p>
 </body>
 </html>
