--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <div> <img src="image.jpeg" alt="Hello MangGom!"> </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is the first file in my new Git Repo.</p>
+<div> <img src="pingponggom.jpeg" alt="Hello MangGom!"> </div>
 </body>
 </html>
